--- a/gpdb/config.yml
+++ b/gpdb/config.yml
@@ -7,9 +7,9 @@ CORE:
   GO_BUILD: "1.11.1"                                      # Version of GO the Application will use to Build (1.7.4)
   BASE_DIR: /usr/local/src                                # Location Where [APPLICATION_NAME] Files Will Be Created
   TEMP_DIR: /temp/                                        # Temporary Folder Inside [APPLICATION_NAME] for Hostfile and Init
-  DATALABS: false                                         # Is this Data Labs? Only specific to Pivotal deployments
+  DATALABS: true                                         # Is this Data Labs? Only specific to Pivotal deployments
 DOWNLOAD:
-  API_TOKEN: <API TOKEN>           						  # You can get it after login to PivNet
+  API_TOKEN: ${API_TOKEN}           						          # You can get it after login to PivNet
   DOWNLOAD_DIR: /download/                                # Folder Inside [APPLICATION_NAME]: stores binares
 INSTALL:
   ENV_DIR: /env/                                          # Folder Inside [APPLICATION_NAME]: stores source files
@@ -24,4 +24,4 @@ INSTALL:
   MIRROR_DATA_DIRECTORY: /data/mirror/                    # Mirror Data Directory
   TOTAL_SEGMENT: 2                                        # Total Segments to be created
   MAXINSTALLED: 9                                         # Max number of installed GP instances
-  PGCONFDIRECTORY: /home/gpadmin/.workspace/              # Optional. Full path to 'postgresql.conf' file containing custom server parameters. Default: /home/gpadmin/
+  PGCONFDIRECTORY: /home/gpadmin                          # Optional. Full path to 'postgresql.conf' file containing custom server parameters. Default: /home/gpadmin/
